[tool.poetry]
name = "fastapiTest"
version = "0.1.0"
description = ""
authors = ["atlantika"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.35"
fastapi = "^0.115.0"
psycopg2-binary = "^2.9.9"
pydantic = {extras = ["email"], version = "^2.9.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
